--- a/Rom/system/app/Settings/res/values/strings.xml
+++ b/Rom/system/app/Settings/res/values/strings.xml
@@ -1997,9 +1997,9 @@ Any user can accept updated app permissions on behalf of all other users."</stri
     <string name="cell_broadcast_settings">Cell broadcasts</string>
     <string name="cell_broadcast_settings_summary">Select the types of emergency alerts to display.</string>
     <string name="quick_links_title">Quick Links</string>
-    <string name="rom_control_title">ROM Control</string>
+    <string name="rom_control_title">Hackdroid ROM Control</string>
     <string name="themes_title">Themes</string>
-    <string name="mod_version">AOKP version</string>
+    <string name="mod_version">Hackdroid Version</string>
     <string name="mod_version_default">Unknown</string>
     <string name="anonymous_statistics_title">AOKP Statistics</string>
     <string name="anonymous_statistics_summary">Help make AOKP better by opting into anonymous statistics reporting</string>
